--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-scripts": "4.0.0",
-    "redu": "1.0.1",
-    "redux": "4.0.5"
+    "redux": "4.0.5",
+    "redux-thunk": "2.3.0"
   },
   "devDependencies": {
     "typescript": "4.1.3"
